--- a/src/component/reacttablecomponent/table.css
+++ b/src/component/reacttablecomponent/table.css
@@ -94,3 +94,16 @@ span {
 .errormsg{
   text-align: center;
 }
+.input{
+  width: 24%;
+}
+.input[type=number]::-webkit-inner-spin-button, 
+.input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+.goto{
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
