--- a/src/component/map/timerange.css
+++ b/src/component/map/timerange.css
@@ -18,9 +18,9 @@
     font-size: 11px;
 }
 .range{
-    -webkit-appearance: none;
+    /* -webkit-appearance: none; */
     background-color: purple;
-    height: 4px;
+    height: 10px;
     width: 100%;
     cursor: pointer;
     opacity: 1;
@@ -40,23 +40,22 @@
     z-index: 3;
     border-radius: 50%;
     position: absolute;
-    top: 40%;
+    top: 25%;
     pointer-events: none;
     user-select: none;
     background-color: black;
 }
 .progress-bar-cover {
-    background-color: yellow;
+    background-color: blue;
     width: 0%;
     height: 15px;
     display: block;
     position: absolute;
-    top: 40%;
+    top: 25%;
     /* transform: translateY(-50%); */
     z-index: 1;
     user-select: none;
     pointer-events: none;
-    border: 1px solid black;
   }
 
   
