--- a/src/pages/clonechat.css
+++ b/src/pages/clonechat.css
@@ -1,25 +1,11 @@
-.progressbar{
-    width: 90%;
-    height: 5px;
-    margin: auto;
-    background-color: white;
-}
-    /* .progresspercent{
-        font-weight: 600;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%,-50%);
-        color: white;
-        text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
-    } */
-.timer{
-    font-size: 11px;
+*{
+    margin: 0;
+    padding: 0;
 }
 .range{
     /* -webkit-appearance: none; */
     background-color: purple;
-    height: 10px;
+    height: 4px;
     width: 100%;
     cursor: pointer;
     opacity: 1;
@@ -56,7 +42,7 @@
     user-select: none;
     pointer-events: none;
   }
-  datalist {
+  /* datalist {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -64,4 +50,17 @@
   }
   option {
     padding: 0;
+  } */
+
+  .player{
+    display: flex;
+    justify-content: space-between;
   }
+  .playerbuttons{
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .playerbuttons:hover{
+    transform: scale(1.2);
+  }
+  
