--- a/src/service/cabservice.css
+++ b/src/service/cabservice.css
@@ -42,7 +42,7 @@
     user-select: none;
     pointer-events: none;
   }
-  /* datalist {
+  datalist {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -50,7 +50,7 @@
   }
   option {
     padding: 0;
-  } */
+  }
 
   .player{
     display: flex;
