modal started for cab info

--- a/src/service/table.css
+++ b/src/service/table.css
@@ -40,10 +40,10 @@ table td {
   text-align: center;
 }
 
-span {
+/* span {
   color: black;
   font-weight: bolder;
-}
+} */
 
 .button {
   background-color: #04AA6D;
