--- a/src/service/cabservice.css
+++ b/src/service/cabservice.css
@@ -1,66 +1,140 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.range{
-    /* -webkit-appearance: none; */
-    background-color: purple;
-    height: 4px;
-    width: 100%;
-    cursor: pointer;
-    opacity: 1;
-    margin: 0 auto;
+.runner{
+  width: 15px;
+  height: 15px;
+  float: right;
 }
-.range::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    width: 15px;
-    height: 15px;
-    background: pink;
-    border-radius: 50%;
-    cursor: pointer;
+.range {
+  /* -webkit-appearance: none; */
+  background-color: purple;
+  height: 4px;
+  width: 100%;
+  cursor: pointer;
+  opacity: 1;
+  margin: 0 auto;
+  border: 1px solid black;
 }
-.thumb{
-    width: 15px;
-    height: 15px;
-    z-index: 3;
-    border-radius: 50%;
-    position: absolute;
-    top: 25%;
-    pointer-events: none;
-    user-select: none;
-    background-color: black;
-}
-.progress-bar-cover {
-    background-color: blue;
-    width: 0%;
-    height: 15px;
-    display: block;
-    position: absolute;
-    top: 25%;
-    /* transform: translateY(-50%); */
-    z-index: 1;
-    user-select: none;
-    pointer-events: none;
-  }
-  datalist {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    font-size: 12px;
-  }
-  option {
-    padding: 0;
-  }
 
-  .player{
-    display: flex;
-    justify-content: space-between;
+.slider-container {
+  position: relative;
+  width: 95%;
+  margin: auto;
+}
+
+.range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  background: pink;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+}
+
+.timer {
+  position: absolute;
+  bottom: -40%;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  padding: 2px 4px;
+  display: none;
+}
+
+.thumb {
+  width: 15px;
+  height: 15px;
+  z-index: 3;
+  border-radius: 50%;
+  position: absolute;
+  top: 22%;
+  pointer-events: none;
+  user-select: none;
+  background-color: blue;
+}
+
+.slider-container:hover .timer {
+  display: block;
+}
+
+.progress-bar-cover {
+  background-color: purple;
+  width: 0%;
+  height: 4px;
+  display: block;
+  position: absolute;
+  top: 38%;
+  border-radius: 20px;
+  /* transform: translateY(-50%); */
+  z-index: 1;
+  user-select: none;
+  pointer-events: none;
+}
+
+datalist {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 12px;
+}
+
+option {
+  padding: 0;
+}
+
+.player {
+  display: inline-block;
+  margin-left: 20%;
+}
+
+.playerbuttons {
+  border: none;
+}
+
+.playerbuttons:hover {
+  transform: scale(1.1);
+}
+
+.popup {
+  width: 200px;
+}
+.popupcontent {
+  display: flex;
+  justify-content: space-between;
+}
+.tick {
+  display: flex;
+  justify-content: center;
+  width: 1px;
+  background: gray;
+  height: 10px;
+  line-height: 40px;
+}
+.cabdata{
+  font-size: 14px;
+  font-weight: bold;
+}
+.sidebar{
+  position: absolute;
+  top: 10%;
+  z-index: 4;
+  border: 1px solid black;
+  background-color: white;
+}
+.tab{
+  border: none;
+}
+@media screen and (max-width: 600px) {
+  .cabdata{
+    font-size: 10px;
   }
-  .playerbuttons{
-    border: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+@media screen and (max-width: 400px){
+  .cabdata{
+    font-size: 8px;
   }
-  .playerbuttons:hover{
-    transform: scale(1.2);
-  }
-  
+}
